--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd frontend && npm run dev"
+    "dev": "cd frontend && npm run dev",
+    "install-all": "cd frontend && npm install && cd ../server && npm install"
   },
   "keywords": [],
   "author": "",
